# benchmark_pilot

./: README.md  pyproject.toml  report.html  report.md
ImageFactory/: pg.Dockerfile
archive/2025/11/09/results/: chunks.csv  detailed_results.csv  questions.csv
docs/schema/: AI_SCHEMA_DOCUMENTATION.md  ai_dependencies.dot  ai_dependency_order.json  ai_schema.html  ai_schema_details.txt  ai_schema_full.json  ai_schema_supplementary.json
results/: category_analysis.html  deep_dive.html  detailed_results.csv  geographic_analysis.html  heatmap.html  model_characteristics.html  report.html  report.md  results.csv  standalone_benchmark_validation.html  temporal_evolution.html
